--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-markdown": "^8.0.7",
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
