--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "react-router-dom": "^6.20.0",
     "react-markdown": "^8.0.7",
     "react-hot-toast": "^2.4.1",
-    "uuid": "^9.0.1"
+    "@emailjs/browser": "^3.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
