--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.20.0",
     "react-markdown": "^8.0.7",
     "react-hot-toast": "^2.4.1",
-    "@emailjs/browser": "^3.11.0"
+    "@emailjs/browser": "^3.11.0",
+    "react-helmet-async": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
